tests/baselines/reference/exportInterfaceClassAndValueWithDuplicatesInImportList.errors.txt
tests/cases/compiler/exportInterfaceClassAndValueWithDuplicatesInImportList.ts(5,14): error TS2300: Duplicate identifier 'Foo'.
tests/cases/compiler/exportInterfaceClassAndValueWithDuplicatesInImportList.ts(5,19): error TS2300: Duplicate identifier 'Foo'.


==== tests/cases/compiler/exportInterfaceClassAndValueWithDuplicatesInImportList.ts (2 errors) ====
    const foo = 1
    class Foo {}
    interface Foo {}
    
    export {foo, Foo, Foo}
                 ~~~
!!! error TS2300: Duplicate identifier 'Foo'.
                      ~~~
!!! error TS2300: Duplicate identifier 'Foo'.
    